--- a/fraud-detection/Makefile
+++ b/fraud-detection/Makefile
@@ -1,13 +1,13 @@
 .PHONY: tests docs
 
-dependencies: 
+install: 
 	@echo "Initializing Git..."
 	git init
 	@echo "Installing dependencies..."
 	poetry install --no-root
 	poetry run pre-commit install
 
-env: dependencies
+activate:
 	@echo "Activating virtual environment..."
 	poetry shell
 
