--- a/fraud-detection/config/main.yaml
+++ b/fraud-detection/config/main.yaml
@@ -9,6 +9,6 @@ defaults:
   - _self_
 
 data:
-  raw: data/raw/sample.csv
-  processed: data/processed/processed.csv
-  final: data/final/final.csv
+  raw: data/raw/fraudTrain.csv
+  processed: data/processed/processed_fraud.csv
+  #final: data/final/final.csv
