--- a/fraud-detection/pyproject.toml
+++ b/fraud-detection/pyproject.toml
@@ -9,6 +9,9 @@ python = "3.11.4"
 dvc = "^2.10.0"
 hydra-core = "^1.1.1"
 pdoc3 = "^0.10.0"
+dagshub = "^0.3.12"
+mlflow = "^2.10.0"
+imbalanced-learn = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
