--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "fraud-detection"
+name = "model-deployment-bentoml"
 version = "0.1.0"
 description = ""
 authors = ["FelipeFernandez"]
@@ -12,6 +12,7 @@ pdoc3 = "^0.10.0"
 dagshub = "^0.3.12"
 mlflow = "^2.10.0"
 imbalanced-learn = "^0.12.0"
+bentoml = "^1.1.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
