--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,7 @@ kaggle==1.5.13
 keyring==23.13.1
 kiwisolver==1.4.4
 korean-lunar-calendar==0.3.1
-llvmlite==0.39.1
+#llvmlite==0.39.1
 lockfile==0.12.2
 LunarCalendar==0.0.9
 Mako==1.2.4
