--- a/requirements.txt
+++ b/requirements.txt
@@ -110,7 +110,7 @@ nbformat==5.8.0
 nest-asyncio==1.5.6
 notebook==6.5.3
 notebook_shim==0.2.2
-numba==0.56.4
+#numba==0.56.4
 numpy==1.23.5
 nvidia-ml-py==12.535.77
 oauthlib==3.2.2
