--- a/requirements.txt
+++ b/requirements.txt
@@ -53,9 +53,9 @@ frozenlist==1.3.3
 fsspec==2023.6.0
 gitdb==4.0.10
 GitPython==3.1.31
-google-api-core==2.11.1
-google-auth==2.22.0
-googleapis-common-protos==1.60.0
+#google-api-core==2.11.1
+#google-auth==2.22.0
+#googleapis-common-protos==1.60.0
 gpustat==1.1.1
 grpcio==1.57.0
 gunicorn==20.1.0
